--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "private": true,
   "license": "MIT",
   "engines": {
-    "node": "14.16.0"
+    "node": ">=14.16.0 <17.0.0"
   },
   "scripts": {
     "prebuild": "rimraf dist",
