--- a/package.json
+++ b/package.json
@@ -37,13 +37,13 @@
     "@nestjs/passport": "^7.1.5",
     "@nestjs/platform-express": "^7.6.17",
     "@nestjs/terminus": "^7.2.0",
-    "@typegoose/typegoose": "^7.4.5",
+    "@typegoose/typegoose": "8.2.0",
     "apollo-server-express": "^2.25.0",
     "bcryptjs": "^2.4.3",
     "file-type": "^16.5.0",
     "graphql": "^15.5.0",
     "graphql-tools": "^7.0.5",
-    "mongoose": "5.10.18",
+    "mongoose": "^5.13.14",
     "nanoid": "^3.1.23",
     "nestjs-role-protected": "^0.2.1",
     "nestjs-typegoose": "^7.1.38",
@@ -52,29 +52,28 @@
     "ramda": "^0.27.1",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
-    "rxjs": "^7.1.0"
+    "rxjs": "^6.5.4"
   },
   "devDependencies": {
     "@nestjs/cli": "^7.6.0",
     "@nestjs/schematics": "^7.3.1",
     "@nestjs/testing": "^7.6.17",
     "@types/jest": "^26.0.23",
-    "@types/mongoose": "^5.10.3",
     "@types/node": "^15.12.0",
     "@types/supertest": "^2.0.11",
-    "@typescript-eslint/eslint-plugin": "^4.26.0",
-    "@typescript-eslint/parser": "^4.26.0",
-    "eslint": "^7.27.0",
+    "@typescript-eslint/eslint-plugin": "^5.10.1",
+    "@typescript-eslint/parser": "^5.10.1",
+    "eslint": "^8.7.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-config-rokket-labs": "^0.4.5",
     "eslint-plugin-import": "^2.23.4",
-    "eslint-plugin-prettier": "^3.4.0",
+    "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-simple-import-sort": "^7.0.0",
-    "husky": "^6.0.0",
+    "husky": "^7.0.4",
     "jest": "^27.0.4",
-    "lint-staged": "^11.0.0",
+    "lint-staged": "^12.3.2",
     "prettier": "^2.3.0",
-    "prettier-eslint": "^12.0.0",
+    "prettier-eslint": "^13.0.0",
     "supertest": "^6.1.3",
     "ts-jest": "27.0.2",
     "ts-loader": "^9.2.2",
