--- a/package.json
+++ b/package.json
@@ -28,38 +28,39 @@
     "type-check": "tsc"
   },
   "dependencies": {
-    "@nestjs/common": "^7.6.17",
-    "@nestjs/config": "^0.6.3",
-    "@nestjs/core": "^7.6.17",
-    "@nestjs/graphql": "^7.10.6",
-    "@nestjs/jwt": "^7.2.0",
-    "@nestjs/mongoose": "^7.2.4",
-    "@nestjs/passport": "^7.1.5",
-    "@nestjs/platform-express": "^7.6.17",
-    "@nestjs/terminus": "^7.2.0",
-    "@typegoose/typegoose": "8.2.0",
-    "apollo-server-express": "^2.25.0",
+    "@nestjs/axios": "^0.0.5",
+    "@nestjs/common": "^8.2.6",
+    "@nestjs/config": "^1.1.6",
+    "@nestjs/core": "^8.2.6",
+    "@nestjs/graphql": "^9.1.2",
+    "@nestjs/jwt": "^8.0.0",
+    "@nestjs/mongoose": "^9.0.2",
+    "@nestjs/passport": "^8.1.0",
+    "@nestjs/platform-express": "^8.2.6",
+    "@nestjs/terminus": "^8.0.4",
+    "@typegoose/typegoose": "9.5.0",
+    "apollo-server-express": "^3.6.2",
     "bcryptjs": "^2.4.3",
     "file-type": "^16.5.0",
-    "graphql": "^15.5.0",
-    "graphql-tools": "^7.0.5",
-    "mongoose": "^5.13.14",
+    "graphql": "15.5.1",
+    "graphql-tools": "^8.2.0",
+    "mongoose": "^6.1.8",
     "nanoid": "^3.1.23",
     "nestjs-role-protected": "^0.2.1",
     "nestjs-typegoose": "^7.1.38",
-    "passport": "^0.4.1",
+    "passport": "^0.5.2",
     "passport-jwt": "^4.0.0",
-    "ramda": "^0.27.1",
+    "ramda": "^0.28.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
-    "rxjs": "^6.5.4"
+    "rxjs": "^7.5.2"
   },
   "devDependencies": {
-    "@nestjs/cli": "^7.6.0",
-    "@nestjs/schematics": "^7.3.1",
-    "@nestjs/testing": "^7.6.17",
-    "@types/jest": "^26.0.23",
-    "@types/node": "^15.12.0",
+    "@nestjs/cli": "^8.2.0",
+    "@nestjs/schematics": "^8.0.5",
+    "@nestjs/testing": "^8.2.6",
+    "@types/jest": "^27.4.0",
+    "@types/node": "16.11.21",
     "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^5.10.1",
     "@typescript-eslint/parser": "^5.10.1",
@@ -75,7 +76,7 @@
     "prettier": "^2.3.0",
     "prettier-eslint": "^13.0.0",
     "supertest": "^6.1.3",
-    "ts-jest": "27.0.2",
+    "ts-jest": "27.1.3",
     "ts-loader": "^9.2.2",
     "ts-node": "^10.0.0",
     "tsconfig-paths": "^3.9.0",
