--- a/package.json
+++ b/package.json
@@ -20,34 +20,60 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
-    "@nestjs/common": "^9.0.0",
-    "@nestjs/core": "^9.0.0",
-    "@nestjs/platform-express": "^9.0.0",
+    "@apollo/server": "^4.6.0",
+    "@m8a/nestjs-typegoose": "^11.0.0",
+    "@nestjs/apollo": "^11.0.5",
+    "@nestjs/common": "^9.4.0",
+    "@nestjs/config": "^2.3.1",
+    "@nestjs/core": "^9.4.0",
+    "@nestjs/graphql": "^11.0.5",
+    "@nestjs/jwt": "^10.0.3",
+    "@nestjs/mapped-types": "*",
+    "@nestjs/passport": "^9.0.3",
+    "@nestjs/platform-express": "^9.4.0",
+    "@nestjs/terminus": "^9.2.2",
+    "@typegoose/typegoose": "^11.0.0",
+    "bcryptjs": "^2.4.3",
+    "file-type": "^18.2.1",
+    "graphql": "^16.6.0",
+    "graphql-tools": "^8.3.19",
+    "graphql-ws": "^5.12.1",
+    "mongoose": "7.0.3",
+    "nanoid": "^3.3.6",
+    "passport": "^0.6.0",
+    "passport-jwt": "^4.0.1",
+    "ramda": "^0.29.0",
     "reflect-metadata": "^0.1.13",
-    "rxjs": "^7.2.0"
+    "rimraf": "^5.0.0",
+    "rxjs": "^7.8.0"
   },
   "devDependencies": {
-    "@nestjs/cli": "^9.0.0",
-    "@nestjs/schematics": "^9.0.0",
-    "@nestjs/testing": "^9.0.0",
-    "@types/express": "^4.17.13",
+    "@nestjs/cli": "^9.3.0",
+    "@nestjs/schematics": "^9.1.0",
+    "@nestjs/testing": "^9.4.0",
+    "@types/express": "^4.17.17",
     "@types/jest": "29.5.0",
     "@types/node": "18.15.11",
-    "@types/supertest": "^2.0.11",
-    "@typescript-eslint/eslint-plugin": "^5.0.0",
-    "@typescript-eslint/parser": "^5.0.0",
-    "eslint": "^8.0.1",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-prettier": "^4.0.0",
+    "@types/supertest": "^2.0.12",
+    "@typescript-eslint/eslint-plugin": "^5.58.0",
+    "@typescript-eslint/parser": "^5.58.0",
+    "eslint": "^8.38.0",
+    "eslint-config-prettier": "^8.8.0",
+    "eslint-config-rokket-labs": "^0.4.11",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-simple-import-sort": "^7.0.0",
     "jest": "29.5.0",
-    "prettier": "^2.3.2",
+    "lint-staged": "^11.2.6",
+    "prettier": "^2.8.7",
+    "prettier-eslint": "^15.0.1",
     "source-map-support": "^0.5.20",
-    "supertest": "^6.1.3",
+    "supertest": "^6.3.3",
     "ts-jest": "29.0.5",
-    "ts-loader": "^9.2.3",
-    "ts-node": "^10.0.0",
+    "ts-loader": "^9.4.2",
+    "ts-node": "^10.9.1",
     "tsconfig-paths": "4.2.0",
-    "typescript": "^4.7.4"
+    "typescript": "^4.9.5"
   },
   "jest": {
     "moduleFileExtensions": [
