--- a/package.json
+++ b/package.json
@@ -1,11 +1,14 @@
 {
-  "name": "pnpm-nestjs",
-  "version": "0.0.1",
-  "description": "",
-  "author": "",
+  "name": "nestjs-template",
+  "version": "0.0.4",
+  "description": "Rokket Labs' NestJS template for all backend projects",
+  "author": "Rokket Labs <tomas@rokketlabs.com>",
   "private": true,
-  "license": "UNLICENSED",
+  "license": "MIT",
   "scripts": {
+    "prebuild": "rimraf dist",
+    "prestart": "rimraf dist",
+    "postinstall": "husky install",
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
@@ -17,12 +20,14 @@
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json"
+    "test:e2e": "jest --config ./test/jest-e2e.json",
+    "type-check": "tsc"
   },
   "dependencies": {
     "@apollo/server": "^4.6.0",
     "@m8a/nestjs-typegoose": "^11.0.0",
     "@nestjs/apollo": "^11.0.5",
+    "@nestjs/axios": "^2.0.0",
     "@nestjs/common": "^9.4.0",
     "@nestjs/config": "^2.3.1",
     "@nestjs/core": "^9.4.0",
@@ -33,13 +38,15 @@
     "@nestjs/platform-express": "^9.4.0",
     "@nestjs/terminus": "^9.2.2",
     "@typegoose/typegoose": "^11.0.0",
+    "axios": "^1.3.5",
     "bcryptjs": "^2.4.3",
-    "file-type": "^18.2.1",
+    "file-type": "^16.5.4",
     "graphql": "^16.6.0",
-    "graphql-tools": "^8.3.19",
+    "graphql-tools": "^8.3.20",
     "graphql-ws": "^5.12.1",
     "mongoose": "7.0.3",
     "nanoid": "^3.3.6",
+    "nestjs-role-protected": "^0.2.1",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.1",
     "ramda": "^0.29.0",
@@ -48,7 +55,7 @@
     "rxjs": "^7.8.0"
   },
   "devDependencies": {
-    "@nestjs/cli": "^9.3.0",
+    "@nestjs/cli": "^9.4.0",
     "@nestjs/schematics": "^9.1.0",
     "@nestjs/testing": "^9.4.0",
     "@types/express": "^4.17.17",
@@ -63,6 +70,7 @@
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-simple-import-sort": "^7.0.0",
+    "husky": "^8.0.3",
     "jest": "29.5.0",
     "lint-staged": "^11.2.6",
     "prettier": "^2.8.7",
@@ -91,5 +99,14 @@
     ],
     "coverageDirectory": "../coverage",
     "testEnvironment": "node"
+  },
+  "lint-staged": {
+    "*.{js,jsx,ts,tsx}": [
+      "prettier --write",
+      "eslint --fix"
+    ],
+    "{*.{json,md}}": [
+      "prettier --write"
+    ]
   }
 }
