feat: pnpm with husky

--- a/package.json
+++ b/package.json
@@ -8,7 +8,6 @@
   "scripts": {
     "prebuild": "rimraf dist",
     "prestart": "rimraf dist",
-    "postinstall": "husky install",
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
@@ -21,7 +20,8 @@
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
-    "type-check": "tsc"
+    "type-check": "tsc",
+    "prepare": "husky install"
   },
   "dependencies": {
     "@apollo/server": "^4.6.0",
